@@ -9,7 +9,7 @@
     <artifactId>swagger-codegen-project</artifactId>
     <packaging>pom</packaging>
     <name>swagger-codegen-project</name>
-    <version>3.0.27-SNAPSHOT</version>
+    <version>3.0.31-SNAPSHOT</version>
     <url>https://github.com/swagger-api/swagger-codegen</url>
     <scm>
         <connection>scm:git:git@github.com:swagger-api/swagger-codegen.git</connection>
@@ -129,6 +129,8 @@
                     <argLine>-XX:+StartAttachListener</argLine>
                     <argLine>
                         -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar
+                        -XX:+IgnoreUnrecognizedVMOptions
+                        --add-opens=java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
                 <executions>
@@ -261,6 +263,11 @@
                     <groupId>net.revelc.code</groupId>
                     <artifactId>formatter-maven-plugin</artifactId>
                     <version>0.5.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>3.3.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -1149,20 +1156,20 @@
         </repository>
     </repositories>
     <properties>
-        <swagger-codegen-generators-version>1.0.27-SNAPSHOT</swagger-codegen-generators-version>
-        <swagger-core-version>2.1.9</swagger-core-version>
-        <swagger-core-version-v1>1.6.2</swagger-core-version-v1>
-        <swagger-parser-version>2.0.26</swagger-parser-version>
-        <swagger-parser-version-v1>1.0.55</swagger-parser-version-v1>
-        <jackson-version>2.11.4</jackson-version>
+        <swagger-codegen-generators-version>1.0.31-SNAPSHOT</swagger-codegen-generators-version>
+        <swagger-core-version>2.1.11</swagger-core-version>
+        <swagger-core-version-v1>1.6.3</swagger-core-version-v1>
+        <swagger-parser-version>2.0.28</swagger-parser-version>
+        <swagger-parser-version-v1>1.0.56</swagger-parser-version-v1>
+        <jackson-version>2.12.1</jackson-version>
         <scala-version>2.11.1</scala-version>
         <felix-version>3.3.0</felix-version>
-        <commons-io-version>2.4</commons-io-version>
+        <commons-io-version>2.11.0</commons-io-version>
         <commons-cli-version>1.2</commons-cli-version>
         <junit-version>4.13.1</junit-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
         <commons-lang-version>3.4</commons-lang-version>
-        <slf4j-version>1.7.25</slf4j-version>
+        <slf4j-version>1.7.32</slf4j-version>
         <logback-version>1.2.3</logback-version>
         <scala-maven-plugin-version>3.2.1</scala-maven-plugin-version>
         <jmustache-version>1.12</jmustache-version>
@@ -1171,7 +1178,7 @@
         <jmockit-version>1.25</jmockit-version>
         <reflections-version>0.9.11</reflections-version>
         <jmockit-version>1.42</jmockit-version>
-        <snakeyaml-version>1.24</snakeyaml-version>
+        <snakeyaml-version>1.27</snakeyaml-version>
         <handlebars-version>4.1.2</handlebars-version>
     </properties>
 </project>
